drippies and icons

--- a/index.html
+++ b/index.html
@@ -27,34 +27,33 @@
     <ul class="sidebar-menu">
       <li>
         <a href="#">
-          <!-- <img src="icons/home.png" alt="home icon" /> -->
-          Home
+          <img width="24" height="24" src="icons/sprout.png" alt="sprout icon" />
+          Myself
         </a>
       </li>
       <li>
         <a href="#">
-          <!-- <img src="icons/about.png" alt="about icon" /> -->
-          About
+          <img width="24" height="24" src="icons/leaf.png" alt="leaf icon" />
+          My Dreams
         </a>
       </li>
       <li>
         <a href="#">
-          <!-- <img src="icons/services.png" alt="services icon" /> -->
-          Services
+          <img width="24" height="24" src="icons/bud.png" alt="flower icon" />
+          My Creations
         </a>
       </li>
       <li>
         <a href="#">
-          <!-- <img src="icons/portfolio.png" alt="portfolio icon" /> -->
-          Portfolio
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <!-- <img src="icons/contact.png" alt="contact icon" /> -->
-          Contact
+          <img width="24" height="24" src="icons/branch.png" alt="flower icon" />
+          My Contacts
         </a>   
       </li>
+      <li>
+        <a href="#">
+          <img width="24" height="24" src="icons/flower.png" alt="flower icon" />
+          My Death ?
+        </a>
     </ul>
     </nav>
     <main>
@@ -66,6 +65,16 @@
           nemo quia quae quibusdam dolorum voluptatum nemo quia
         </p>
       </div>
+      <section class="drips">
+        <div class="drip-1"></div>
+        <div class="drip-2"></div>
+        <div class="drip-3"></div>
+        <div class="drip-4"></div>
+        <div class="drip-5"></div>
+        <div class="drip-6"></div>
+        <div class="drip-7"></div>
+      
+      </section>
     </main>
   
 </body>
